loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:21: error: not found: value sortietrouvee
}while(!sortietrouvee())
        ^